# internet-firewall-threat-detection-api

./: .gitignore  README.md  project.md  project_details.md  project_findings.md  pyproject.toml
api/app/: main.py
data/: classification_report.txt  feature_columns.csv  final_data.csv  final_model.pkl
notebooks/: eda.ipynb  hyperparameter_tuning.ipynb  model_training.ipynb
