[project]
name = "interview-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.24.4",
    "scikit-learn==1.3.2",
    "imbalanced-learn==0.11.0",
    "scipy==1.11.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "scikit-plot>=0.3.7",
    "optuna>=4.4.0",
    "nbformat>=5.10.4",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "joblib>=1.5.1",
    "ipykernel>=6.30.0",
    "kagglehub>=0.3.12",
    "streamlit>=1.47.1",
]
